[package]
name = "Rustoki"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "8.0.0"
dotenvy = "0.15.7"
serenity = { version = "0.12.5" , features = ["gateway", "client", "chrono", "cache"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.44", features = ["serde"] }
tracing-subscriber = "0.3.22"
mysql_async = "0.36.1"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-rustls", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rand = "0.10.0"
meval = "0.2.0"
once_cell = "1.21.3"
reqwest = { version = "0.13.2", features = ["json"] }
image = "0.25.9"
regex = "1.12.3"
deunicode = "1.6.2"
phf = { version = "0.13.1", features = ["macros"]}
procfs = "0.18.0"
shell-words = "1.1.1"